goals backend fixes
